--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,18 @@
 /* You can add global styles to this file, and also import other style files */
+
+html,
+body {
+  width: 100%;
+  height: 100%;
+  margin: 0;
+  position: fixed;
+}
+
+canvas {
+  border-style: solid;
+  margin: 5px;
+}
+
+button {
+  margin: 5px;
+}
